# Aurora

./: .env.sample  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
CLI/: __init__.py  main.py
CurrentTimeTools/: Tools.py  __init__.py
EmailTools/: AGENTS.md  AllEmails.py  __init__.py  abc.py  config.py  models.py  tools.py
EmailTools/Providers/: GmailClient.py  OutLookProvider.py
MCPEmailTools/: __init__.py
Web/: main.py  smoke_test.py
Web/static/css/: style.css
Web/static/js/: main.js
Web/templates/: index.html
WebSearchTools/: __init__.py  tools.py
WriteFileTools/: Tools.py  __init__.py
core/: Config.py  __init__.py  edges.py  engine.py  nodes.py  utils.py
core/models/: LLM.py  __init__.py
core/observability/: __init__.py  tracing.py
core/plugin/: ToolBindings.py  ToolInterface.py  __init__.py
