[project]
name = "aurora"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "openai>=1.100.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "yarl>=1.20.1",
]
